--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         >My Projects</a
       ></span
     >
+    
+    <span class="tab" style="float:right; font-size: 20px;" >
+      Contact me via this telephone number:
+          <a href="tel:+358408745953"><i>+358 408745953</i></a></span
+        >
+    </span>
 
     <h1 style="text-align: center; font-family: cursive">
       Welcome to my online CV
@@ -72,20 +78,10 @@
     </div>
     <br />
 
-    <!--Embed my favourite song as an audio format-->
-    <audio controls autoplay loops>
-      <source src="audio/toimuon.m4a" />
-    </audio>
-    <br /><br />
-
     <!--Create a footer to link the address and phone number-->
     <footer>
       <address style="font-size: 20px">
         Address: <b>Vidnäsinkatu 2 as 2 C 212, Kokkola, Finland</b>
-        <span style="float: right; font-size: 22px"
-          >Telephone number:
-          <a href="tel:+358408745953">+358 408745953</a></span
-        >
       </address>
     </footer>
   </body>
