--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <body>
     <br />
     <span class="tab" style="color: red"
-      ><a href="index.html" style="text-decoration: none; color: red"
+      ><a href="index.html" style="text-decoration: none; color: rgb(235, 38, 13)"
         >Home Page</a
       ></span
     >
     <span class="tab" style="color: red"
       ><a
         href="https://github.com/thuantran281"
-        style="text-decoration: none; color: red"
+        style="text-decoration: none; color: rgb(235, 34, 27)"
         target="_blank"
         >My Projects</a
       ></span
@@ -78,7 +78,7 @@
     </div>
     <br />
 
-    <!--Create a footer to link the address and phone number-->
+    <!--Create a footer to link the home address-->
     <footer>
       <address style="font-size: 20px">
         Address: <b>Vidnäsinkatu 2 as 2 C 212, Kokkola, Finland</b>
